2008-06-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/videoscale/gstvideoscale.c: (gst_video_scale_transform_caps):
	Transform a given PAR to a range on the struct with the generic
	height/width instead of the struct with the possibly restricted
	height/width.

2008-06-04  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/videoscale/gstvideoscale.c: (gst_video_scale_transform_caps):
	Prefer the given format if it contains something stricter than [1,MAX]
	for height or width and only put a structure that requires rescaling
	as second. This makes it possible to use videoscale in pipelines where
	the source can actually produce the wanted height/width but usually
	selects a different one from the requested.

2008-06-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	Based on patch by: John Millikin <jmillikin gmail com>

	* gst-libs/gst/tag/gstvorbistag.c: (tag_matches), (gst_vorbis_tag_add),
	  (gst_vorbis_tag_add_coverart):
	  Retrieve COVERART tags from vorbis comments (#512333)

2008-06-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst-libs/gst/tag/tag.h:
	* gst-libs/gst/tag/tags.c: (register_tag_image_type_enum):
	  Don't forget to add new enum value here too (should probably use
	  glib-mkenums here...).

2008-06-03  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst-libs/gst/tag/gstid3tag.c: (gst_tag_list_add_id3_image):
	* gst-libs/gst/tag/tag.h: (GST_TAG_IMAGE_TYPE_NONE),
	* gst-libs/gst/tag/tags.c: (register_tag_image_type_enum),
	  (gst_tag_image_type_get_type), (gst_tag_image_type_is_valid),
	  (gst_tag_image_data_to_image_buffer):
	  Add two utility functions to avoid code duplication (#512333):
	  API: add gst_tag_image_data_to_image_buffer()
	  API: add gst_tag_list_add_id3_image()
	  API: add GST_TAG_IMAGE_TYPE_NONE enum value

2008-06-03  Sebastian Dröge  <slomo@circular-chaos.org>

	* win32/common/libgstaudio.def:
	Add gst_audio_check_channel_positions() to the exported symbols.
